Fix for featherlight z-index being too low (falls beneath DataTables pagination highlight)

--- a/app/assets/stylesheets/style.css.scss
+++ b/app/assets/stylesheets/style.css.scss
@@ -194,6 +194,9 @@ th {
         font-size: 100px;
     }
 }
+.featherlight-holder {
+    z-index: 10;
+}
 .tdkey {
     font-weight: bold;
 }
